--- a/simple-relay-starter/package.json
+++ b/simple-relay-starter/package.json
@@ -68,12 +68,14 @@
   "scripts": {
     "start": "node server.js",
     "dev": "npm run build && npm run watch",
-    "build": "npm run build:schema && npm run build:browser",
+    "build-css": "node-sass --include-path scss styles/main.scss public/css/main.css",
+    "build": "npm run build:schema && npm run build:browser && npm run build-css",
     "build:schema": "node ./utils/updateSchema.js",
     "build:browser": "browserify browser.js -o public/bundle.js",
     "watch": "parallelshell 'npm run watch:schema' 'npm run watch:browser' 'npm run watch:server'",
     "watch:schema": "onchange schema/schema.js -- npm run build:schema",
     "watch:browser": "onchange browser.js App.js schema/schema.json -- npm run build:browser",
-    "watch:server": "nodemon --watch server.js --watch 'schema/*.js' server.js"
+    "watch:server": "nodemon --watch server.js --watch 'schema/*.js' server.js",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   }
 }
