--- a/simple-relay-starter/package.json
+++ b/simple-relay-starter/package.json
@@ -36,6 +36,7 @@
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
+    "react-game-kit": "0.0.1",
     "react-relay": "^0.9.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
