--- a/simple-relay-starter/package.json
+++ b/simple-relay-starter/package.json
@@ -29,7 +29,7 @@
     "file-loader": "^0.9.0",
     "graphql": "^0.6.2",
     "graphql-relay": "^0.4.2",
-    "node-sass": "^3.13.0",
+    "node-sass": "3.12.2",
     "nodemon": "^1.10.0",
     "onchange": "^2.5.0",
     "parallelshell": "^2.0.0",
