--- a/simple-relay-starter/package.json
+++ b/simple-relay-starter/package.json
@@ -43,7 +43,8 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0"
+    "babel-cli": "^6.14.0",
+    "eslint": "^3.11.1"
   },
   "browserify-shim": {
     "react": "global:React",
