--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "version": "0.1.0",
   "scripts": {
     "start": "babel-node ./server.js",
-    "update-schema": "babel-node ./scripts/updateSchema.js"
+    "update-schema": "babel-node ./scripts/updateSchema.js",
+    "build-css": "sass styles/memory.scss public/css/main.css",
+    "build": "npm run build-css && npm start",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "dependencies": {
     "babel-core": "^6.14.0",
@@ -18,6 +21,7 @@
     "babel-relay-plugin": "0.9.3",
     "chokidar": "1.6.0",
     "classnames": "2.2.5",
+    "dart-sass": "^1.0.0-alpha.6",
     "express": "4.14.0",
     "express-graphql": "0.5.4",
     "graphql": "0.7.0",
