--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-graphql": "0.5.4",
     "graphql": "0.7.0",
     "graphql-relay": "0.4.3",
+    "invariant": "^2.2.2",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.1",
