--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.1",
     "react-relay": "0.9.3",
+    "react-router": "^3.0.0",
+    "react-router-relay": "^0.13.5",
     "require-clean": "0.1.3",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.15.1"
