--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^15.3.1",
     "react-relay": "0.9.3",
     "react-router": "^3.0.0",
+    "react-router-page-transition": "^2.1.2",
     "react-router-relay": "^0.13.5",
     "require-clean": "0.1.3",
     "webpack": "1.13.2",
