--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "graphql": "0.7.0",
     "graphql-relay": "0.4.3",
     "invariant": "^2.2.2",
-    "react": "^15.3.1",
+    "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.3.1",
+    "react-dom": "^15.4.2",
+    "react-flipcard": "^0.2.1",
     "react-relay": "0.9.3",
     "react-router": "^3.0.0",
     "react-router-page-transition": "^2.1.2",
