--- a/package.json
+++ b/package.json
@@ -32,15 +32,21 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-flipcard": "^0.2.1",
+    "react-hot-loader": "^4.6.3",
     "react-relay": "0.9.3",
     "react-router": "^3.0.0",
     "react-router-page-transition": "^2.1.2",
     "react-router-relay": "^0.13.5",
     "require-clean": "0.1.3",
-    "webpack": "1.13.2",
+    "sass": "^1.16.1",
     "webpack-dev-server": "1.15.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0"
+    "babel-cli": "^6.14.0",
+    "css-loader": "^2.1.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^1.13.2"
   }
 }
